--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Micah's Quad App</title>
+	<title>Quad Grapher FX</title>
 	<script type="text/javascript" src="QuadScripts.js"></script>
 	<style type="text/css">
 	html, body {
@@ -223,30 +223,32 @@ function newGraph(){
 }
 
 function grid() {
-//using the direct variation constant k, we make a grid.
-context.lineWidth=2;
-context.strokeStyle="rgba(0,0,0,.4)";
-for (var i=0; i<w/(2*k); i++) {
+	//using the direct variation constant k, we make a grid.
+	context.lineWidth=2;
+	context.strokeStyle="rgba(0,0,0,.4)";
+	for (var i=0; i<w/k; i++) {
+		context.beginPath();
+		context.moveTo(k*(i+1),0);
+		context.lineTo(k*(i+1),h);
+		context.stroke();
+	}
+	for (var i=0; i<h/k; i++) {
+		context.beginPath();
+		context.moveTo(0,k*(i+1));
+		context.lineTo(w,k*(i+1));
+		context.stroke();
+	}
+	context.lineWidth=4;
+	context.strokeStyle="rgba(0,0,200,.4)";
 	context.beginPath();
-	context.moveTo(w/2+k*(i+1),0);
-	context.lineTo(w/2+k*(i+1),h);
+	context.moveTo(w/2,0);
+	context.lineTo(w/2,h);
 	context.stroke();
 	context.beginPath();
-	context.moveTo(w/2-k*(i+1),0);
-	context.lineTo(w/2-k*(i+1),h);
+	context.moveTo(0,h/2);
+	context.lineTo(w,h/2);
 	context.stroke();
-} //close for
-for (var i=0; i<h/(2*k); i++) {
-	context.beginPath();
-	context.moveTo(0,h/2+k*(i+1));
-	context.lineTo(w,h/2+k*(i+1));
-	context.stroke();
-	context.beginPath();
-	context.moveTo(0,h/2-k*(i+1));
-	context.lineTo(w,h/2-k*(i+1));
-	context.stroke();
-} //close for
-}//close grid
+	}
 
 // now draw the axis yourself
 function newGraph(){
